objects/Behavioral_Health_WGS_Only__c.object
<CustomObject>
    <fields>
        <fullName>AccountRecordTypeBehavHeath__c</fullName>
        <description>This field is used in workflow to pull down the Account Record type- US172</description>
        <encryptionScheme>None</encryptionScheme>
        <label>AccountRecordTypeBehavHeath</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Demo__c</fullName>
        <formula>Account_Legal_Name__r.Demo__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Demo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Legal_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Legal Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Behavioral Health (WGS Only)</relationshipLabel>
        <relationshipName>Behavioral_Health_WGS_Only</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BH_Management_Level_Service_Description1__c</fullName>
        <label>BH Management Level Service Description</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No BH or Carve Out to Vendor</fullName>
                </value>
                <value>
                    <fullName>Pre-certification Inpatient Facilities Only or MCS Network Use Only</fullName>
                </value>
                <value>
                    <fullName>Pre-certification Facility Review-BH w/ corresponding FFS Medical benefit</fullName>
                </value>
                <value>
                    <fullName>Pre-certification Facility Review-BH w/ corresponding HMO Medical benefit</fullName>
                </value>
                <value>
                    <fullName>Pre-certificaiton Facility Review-BH w/ corresponding POS Medical benefit</fullName>
                </value>
                <value>
                    <fullName>Pre-certification Facility Review-BH w/ corresponding Basic Hospital Medical benefit</fullName>
                </value>
                <value>
                    <fullName>Pre-certification Facility Review-BH w/ corresponding PPO Medical benefit</fullName>
                </value>
                <value>
                    <fullName>Pre-certification Facility Review-BH w/ corresponding Medical Blue Card benefit</fullName>
                </value>
                <value>
                    <fullName>Pre-certification Facility Review &amp; Condition Care, Case and Disease Management – PPO/FFS</fullName>
                </value>
                <value>
                    <fullName>CCM-used when only BH services sold (no Medical)</fullName>
                </value>
                <value>
                    <fullName>Pre-certification Facility Review &amp; Condition Care, Case and Disease Management – HMO/POS</fullName>
                </value>
                <value>
                    <fullName>Pre-certification Facility Review &amp; Condition Care, Case and Disease Management – G8429-HMO/PPO</fullName>
                </value>
                <value>
                    <fullName>BH Resource</fullName>
                </value>
                <value>
                    <fullName>BH-Anthem BC Vivity-Integrated Health Systems</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BH_Management_Level_Service_Description__c</fullName>
        <description>ONLY USE FOR SYSTEM DRIVEN PICKLIST</description>
        <label>BH Management Level Service Description</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>BH_Scenario__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No BH or Carve Out to Vendor</fullName>
                </value>
                <value>
                    <fullName>Pre-certification Inpatient Facilities Only or MCS Network Use Only</fullName>
                </value>
                <value>
                    <fullName>Pre-certification Facility Review-BH w/ corresponding FFS Medical benefit</fullName>
                </value>
                <value>
                    <fullName>Pre-certification Facility Review-BH w/ corresponding HMO Medical benefit</fullName>
                </value>
                <value>
                    <fullName>Pre-certificaiton Facility Review-BH w/ corresponding POS Medical benefit</fullName>
                </value>
                <value>
                    <fullName>Pre-certification Facility Review-BH w/ corresponding Basic Hospital Medical benefit</fullName>
                </value>
                <value>
                    <fullName>Pre-certification Facility Review-BH w/ corresponding PPO Medical benefit</fullName>
                </value>
                <value>
                    <fullName>Pre-certification Facility Review-BH w/ corresponding Medical Blue Card benefit</fullName>
                </value>
                <value>
                    <fullName>CCM-used when only BH services sold (no Medical)</fullName>
                </value>
                <value>
                    <fullName>BH Resource</fullName>
                </value>
                <value>
                    <fullName>BH-Anthem BC Vivity-Integrated Health Systems</fullName>
                </value>
                <value>
                    <fullName>Pre-certification Facility Review &amp; Condition Care, Case and Disease Management – PPO/FFS</fullName>
                </value>
                <value>
                    <fullName>Pre-certification Facility Review &amp; Condition Care, Case and Disease Management – HMO/POS</fullName>
                </value>
                <value>
                    <fullName>Pre-certification Facility Review &amp; Condition Care, Case and Disease Management – G8429-HMO/PPO</fullName>
                </value>
                <value>
                    <fullName>BH Resource &amp; EAP</fullName>
                    <isActive>false</isActive>
                    <label>BH Resource &amp; EAP</label>
                </value>
                <value>
                    <fullName>Condition Care Depression or Standalone Depression (sold with Medical &amp; no BH)</fullName>
                    <isActive>false</isActive>
                    <label>Condition Care Depression or Standalone Depression (sold with Medical &amp; no BH)</label>
                </value>
                <value>
                    <fullName>Pre-certifications Facility Review &amp; Condition Care, Case and Disease Management</fullName>
                    <isActive>false</isActive>
                    <label>Pre-certifications Facility Review &amp; Condition Care, Case and Disease Management</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BH_Scenario__c</fullName>
        <description>ONLY USE FOR SYSTEM DRIVEN PICKLIST</description>
        <label>BH Scenario</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>S0</fullName>
                </value>
                <value>
                    <fullName>S2</fullName>
                </value>
                <value>
                    <fullName>S3</fullName>
                </value>
                <value>
                    <fullName>S4</fullName>
                </value>
                <value>
                    <fullName>S5</fullName>
                </value>
                <value>
                    <fullName>S6</fullName>
                </value>
                <value>
                    <fullName>SALL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Behavioral_Codes_SharePoint_Link__c</fullName>
        <formula>HYPERLINK(&quot;https://share.antheminc.com/sites/EnterMbrRptng/Shared%20Documents/Forms/AllItems.aspx?RootFolder=%2Fsites%2FEnterMbrRptng%2FShared%20Documents%2FBusiness%20Specific%20Reporting%2FBehavior%20Health%20Reporting%2FBH%20MH%20SA%20Service%20Level%20Indicator%20Code&amp;FolderCTID=0x0120008098BF9FFEAAE74197EDAB159B3BDFCB&amp;View=%7BB125C27F%2D1615%2D4ACD%2DBB21%2D7519BE290EF3%7D&amp;InitialTabId=Ribbon%2ERead&amp;VisibilityContext=WSSTabPersistence&quot;, &quot;Behavioral Codes SharePoint Link&quot; ,&quot;_blank&quot;)</formula>
        <inlineHelpText>Click this link to access the SharePoint file with the latest details/descriptions of available behavioral codes</inlineHelpText>
        <label>Behavioral Codes SharePoint Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Behavioral_Health_Name__c</fullName>
        <displayFormat>BH-{00000}</displayFormat>
        <label>Behavioral Health Name</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Corresponding_Package_Code_Contract_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Corresponding Package Code/Contract Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Case_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Implementation Case Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Record_ID__c</fullName>
        <label>Implementation Record ID</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Behavioral Health (WGS Only)</relationshipLabel>
        <relationshipName>Behavioral_Health_WGS_Only</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>MH_SA_Indicator_Code_New__c</fullName>
        <formula>CASE(TEXT( BH_Management_Level_Service_Description1__c), &quot;No BH or Carve Out to Vendor&quot;, &quot;0000&quot;,
&quot;Pre-certification Inpatient Facilities Only or MCS Network Use Only&quot;,&quot;2000&quot;,
&quot;Pre-certification Facility Review-BH w/ corresponding FFS Medical benefit&quot;,&quot;3000&quot;,
&quot;Pre-certification Facility Review-BH w/ corresponding HMO Medical benefit&quot;,&quot;3001&quot;,
&quot;Pre-certificaiton Facility Review-BH w/ corresponding POS Medical benefit&quot;,&quot;3002&quot;,
&quot;Pre-certification Facility Review-BH w/ corresponding Basic Hospital Medical benefit&quot;,&quot;3003&quot;,
&quot;Pre-certification Facility Review-BH w/ corresponding PPO Medical benefit&quot;,&quot;3004&quot;,
&quot;Pre-certification Facility Review-BH w/ corresponding Medical Blue Card benefit&quot;,&quot;3005&quot;,
&quot;CCM-used when only BH services sold (no Medical)&quot; ,&quot;4001&quot;,
&quot;BH Resource&quot; ,&quot;5000&quot;,
&quot;BH-Anthem BC Vivity-Integrated Health Systems&quot; ,&quot;6001&quot;,
&quot;Pre-certification Facility Review &amp; Condition Care, Case and Disease Management – PPO/FFS&quot; ,&quot;4000&quot;,
&quot;Pre-certification Facility Review &amp; Condition Care, Case and Disease Management – HMO/POS&quot; ,&quot;4008&quot;,
&quot;Pre-certification Facility Review &amp; Condition Care, Case and Disease Management – G8429-HMO/PPO&quot; ,&quot;4009&quot;,&quot;&quot;)</formula>
        <label>MH/SA Indicator Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MH_SA_Indicator_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>MH/SA Indicator Code Do Not Use</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Behavioral Health (WGS Only)</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BH-{0000}</displayFormat>
        <label>Behavioral Health (WGS Only) Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Behavioral Health (WGS Only)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>